# nskeyedunarchiver

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MainWindow.nib  README.md
keyed_archive_derive/: Cargo.toml
keyed_archive_derive/src/: lib.rs
nskeyedunarchiver/: .gitignore  Cargo.toml  README.md
nskeyedunarchiver/src/: decodable.rs  error.rs  lib.rs  object.rs
nskeyedunarchiver/src/de/: derive_impl.rs  impls.rs  mod.rs
nskeyedunarchiver/tests/: derive.rs  simple_tests.rs
nskeyedunarchiver/tests_resources/: compile.sh  main.m
nskeyedunarchiver/tests_resources/plists/: NSAffineTransform.plist  NSMutableAttributedString.plist  circularReference.plist  note.plist  nsData.plist  simpleDict.plist
nskeyedunarchiver_derive/: Cargo.toml  README.md
nskeyedunarchiver_derive/src/: lib.rs
src/: de.rs  decodable.rs  error.rs  lib.rs  object.rs  serde.rs
src/de/: impls.rs  mod.rs
tests/: simple_tests.rs
tests_resources/: main.m
tests_resources/plists/: circularReference.plist  plainString.plist  simpleArray.plist
