[package]
name = "nskeyedunarchiver"
version = "0.1.0"
edition = "2021"

[features]
# Makes `Debug` a super trait of Decodable. Useful for analyzing data.
debug_decodable = []

[dependencies]
downcast-rs = "2.0"
paste = "1.0"
plist = "1.7"
thiserror = "2.0"

[dev-dependencies]
simplelog = "0.12"
log = "0.4"
