[package]
name = "nskeyedunarchiver"
version = "0.1.0"
edition = "2024"

[features]
default = ["derive"]
derive = ["dep:nskeyedunarchiver_derive"]

[dependencies]
paste = "1.0"
plist = "1.7"
thiserror = "2.0"
nskeyedunarchiver_derive = { path="../nskeyedunarchiver_derive", optional = true }

[dev-dependencies]
simplelog = "0.12"
log = "0.4"
