[package]
name = "nskeyedunarchiver"
description = "Deserialize Cocoa Keyed Archives into native Rust structures"
version = "0.1.0"
edition = "2024"
authors = ["Michael Wright <maiklpolkovnikov@gmail.com>"]
repository = "https://github.com/michaelwright235/nskeyedunarchiver"
license = "MIT OR Apache-2.0"
categories = ["parser-implementations"]
keywords = ["nskeyedarchiver", "plist", "parser"]

[features]
default = ["derive"]
derive = ["dep:nskeyedunarchiver_derive"]

[dependencies]
paste = "1.0"
# We don't need the serde feature of plist
plist = { version = "1.7", default-features = false }
thiserror = "2.0"
nskeyedunarchiver_derive = { path="../nskeyedunarchiver_derive", optional = true }

[dev-dependencies]
simplelog = "0.12"
log = "0.4"
